# PoliRAG-Enterprise-Policy-Compliance-Intelligence-Engine

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
data/eval/: golden_qa.json
data/raw/: sample_policy.txt
docker/: Dockerfile  docker-compose.yml
scripts/: build_index.py  evaluate.py  ingest.py  serve.py
src/: __init__.py  config.py  models.py
src/app/: main.py  models.py
src/chunking/: __init__.py  chunker.py
src/embeddings/: __init__.py  cache.py  service.py
src/eval/: golden_dataset.py  metrics.py  runner.py
src/generation/: generator.py
src/guardrails/: __init__.py  pii.py  rate_limit.py  rbac.py
src/ingestion/: __init__.py  loaders.py  manager.py  pipeline.py
src/observability/: __init__.py  logging.py  metrics.py
src/retrieval/: __init__.py  hybrid.py
src/vectorstore/: __init__.py  bm25_store.py  faiss_store.py
tests/: conftest.py  test_chunking.py  test_eval.py  test_guardrails.py  test_ingestion.py  test_retrieval.py
