[tool.poetry]
name = "polirag"
version = "0.1.0"
description = "Enterprise Policy & Compliance Intelligence Engine - Production RAG System"
authors = ["Your Team"]
readme = "README.md"
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"

# Document processing
pypdf2 = "^3.0.0"
pdfplumber = "^0.11.0"
python-docx = "^1.1.0"
python-magic = "^0.4.27"

# Embeddings & LLM
openai = "^1.10.0"
tiktoken = "^0.6.0"

# Vector store & search
faiss-cpu = "^1.7.4"
rank-bm25 = "^0.2.2"
numpy = "^1.26.0"

# NLP & Text processing
spacy = "^3.7.0"
sentence-transformers = "^2.3.0"
transformers = "^4.37.0"
torch = "^2.1.0"

# Utilities
python-dotenv = "^1.0.0"
click = "^8.1.7"
rich = "^13.7.0"
tenacity = "^8.2.3"

# Monitoring & Observability
loguru = "^0.7.2"
prometheus-client = "^0.19.0"

# Data handling
pandas = "^2.1.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
black = "^24.1.0"
ruff = "^0.1.11"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"